--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "introspect-typed",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A small library to provide function type checks functionalities",
 
   "author": "subtenante@gmail.com",
@@ -21,18 +21,18 @@
   },
 
   "devDependencies": {
-    "chai": "^1.9.2",
-    "del": "^0.1.3",
-    "gulp": "^3.8.8",
-    "gulp-concat": "^2.4.1",
-    "gulp-jshint": "^1.8.5",
-    "gulp-mocha": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.2",
-    "gulp-traceur": "^0.13.0",
-    "jshint-stylish": "^1.0.0",
-    "mocha": "^1.21.4"
+    "chai": "1.9.x",
+    "del": "0.1.x",
+    "gulp": "3.x.x",
+    "gulp-concat": "2.4.x",
+    "gulp-jshint": "1.8.x",
+    "gulp-mocha": "1.1.x",
+    "gulp-sourcemaps": "1.2.x",
+    "gulp-traceur": "0.x.x",
+    "jshint-stylish": "1.x.x",
+    "mocha": "1.x.x"
   },
   "dependencies": {
-    "lodash": "^2.4.1"
+    "lodash": "2.x.x"
   }
 }
